--- a/01week/helloworld/css/index.html
+++ b/01week/helloworld/css/index.html
@@ -1,10 +1,46 @@
 <!DOCTYPE html>
 <html>
 <head>
-   <title> (Patrick Thomas)'s'Resume</title>
-<link rel="stylesheet" href="./style.css">
+  <style>
+  Body{padding-top: 30px;
+   text-align: center;
+   margin: 30px;
+   background-color: pink;
+   min-width: 400px;
+   min-height: 200px;
+   border-radius: 5px;}
+h1{color:blue;
+font-family:cursive;
+font-size: 300%}
+p{color:green:
+front-family:chalkborad;
+font-size: 150%}
+p::first-letter {
+  text-transform: uppercase;
+  color: red;
+  font-size: 30px;}
+Body{padding-top: 30px;
+   text-align: center;
+   margin: 30px;
+   background-color: pink;
+   min-width: 400px;
+   min-height: 200px;
+   border-radius: 5px;}
+h1{color:blue;
+font-family:cursive;
+font-size: 300%}
+p{color:green:
+front-family:chalkborad;
+font-size: 150%}
+p::first-letter {
+  text-transform: uppercase;
+  color: red;
+  font-size: 30px;}
+  </style>
 </head>
-<body style="background: green">
+<body>
+<title>website</title>
+  <link rel="stylesheet" href="fun.css">
 <h3> Patrick Thomas</h3>
 <p> plt76539@gmail.com </p>
 <p>512-540-0110</p>
@@ -15,4 +51,5 @@
 <p> Ged 2006</p>
 <div><img src="../440px-The_Fabs.jpg">
   </div>
+</body>
 </html>
