--- a/cp1/html.html
+++ b/cp1/html.html
@@ -36,6 +36,7 @@
         <p> This time leting you kids do these after school actives they will be safe and have a chance of find what they might want to do with the rest of there life.</p>
     </div>
   </section>
+<article class="work">
  <h3>Actives 1</h3>
  <p>Cooking classes</p>
  <h3>Actives 2</h3>
